# booking_server/swagger.yaml
@@ -165,6 +165,10 @@ paths:
           name: timeslot
           type: string
           description: timeslot
+        - in: query
+          name: ticket_num
+          type: integer
+          description: number of tickets
       responses:
         200:
           description: "Success"
